1.0.0
* gemify general helpers/rvm stuff ("every_day_irb", "rvm_loader")
* 4 different loading schemas: require, after_rc, thread, autoload
  * load almost every feature in threads
* don't use zucker/alias_for, autload zucker/env (except zucker/os) for performance reasons

0.8.8
* fix 0.8.7 file permissions
* add methodfinder gem
* don't depend on guessmethod anymore

0.8.7
* fix railsrc loading
* add ori gem for nice Object#ri calling
* minor tweaks

0.8.6
* windows support
* update hirb + activate unicode-drawn tables

0.8.5
* rails related fixes

0.8.4
* now using wirb instead of wirble

0.8.3
* improved/added rvm methods (use, gemset, rubies, gemsets)
  * RVM (Ruby API) constant gets autoloaded
* improved cd command
* don't load guessmethod by default (it's cool, but not always suited for production)
* more small changes

0.8.2
* only do irb specific features if in irb (ripl compatibility)
* more generic shell_name (in welcome message)

0.8.1
* rewrote irb_rocket: fancy_irb. No more workarounds needed, anymore.
* added sketches gem
* customizable welcome message
* more little fixes/enhancements

0.8.0
* added Object#ri method
* feature: extension package loading (e.g. irbtools-more)
* feature: loading in IRB.conf[:IRB_RC] (loading when a subirb starts, no more guessmethod rails errors)
* added rerequire (rrq) and ld load helper

0.7.4
* added workaround to use irb_rocket and hirb at the same time (basic hack, e.g. paging does not work)
* fixed little VERSION bug

0.7.3
* refactored file structure and added new Irbtools.add_lib method
* load railsrc if executed with rails and Irbtools.railsrc is set
* more little fixes

0.7.2
* fixed Rails 3 bug
* added boson gem (command repository)
* remember history when resetting or switching ruby version

0.7.1
* added method for starting a debugger

0.7.0
* initial release

J-_-L