@@ -10,7 +10,7 @@ Gem::Specification.new do |s|
   s.description           = 'irbtools is a meta gem that installs useful irb gems and configures your irb. Simply put a require "irbtools" in the .irbrc file in your home directory.'
   s.email                 = 'mail@janlelis.de'
   s.extra_rdoc_files      = %w[LICENSE README.rdoc]
-  s.files                 = %w[lib/irbtools.rb lib/irbtools/configure.rb lib/irbtools/libraries.rb VERSION CHANGELOG Rakefile irbtools.gemspec]
+  s.files                 = %w[lib/irbtools.rb lib/irbtools/configure.rb lib/irbtools/libraries.rb lib/irbtools/minimal.rb VERSION CHANGELOG Rakefile irbtools.gemspec]
   s.homepage              = 'http://github.com/janlelis/irbtools'
   s.required_ruby_version = '>= 1.8.7'
 
