@@ -3,6 +3,7 @@
 * 4 different loading schemas: require, after_rc, thread, autoload
   * load almost every feature in threads
 * don't use zucker/alias_for, autload zucker/env (except zucker/os) for performance reasons
+* add irbtools/minimal mode for starting Irbtools without the default set of libraries
 
 0.8.8
 * fix 0.8.7 file permissions
